# LaDa

./: .env  CMakeLists.txt  Files  Jamroot  LaDaConfig.h.in  Makefile.am  PyladaConfig.h.in  README.md  USER_README.txt  about.html  acinclude.m4  boost-build.jam  bootstrap.sh  breeder.h  checkpoint.h  colonize.h  colpolicy.h  colpolicy.impl.h  configure.ac  darwin.h  darwin.impl.h  dependencies.pl  doxy.conf  env.jam  evaluation.h  gencount.h  generator.h  generic_ops.h  genindex.html  index.html  individual.h  lamarck.cc  lamarck.h  main.cc  max_revision.pl  motu.cc  motu.h  n.pl  objects.inv  operators.h  (+12 more)
atat/: Jamfile  Makefile.am  array.h  arraylist.h  atat.py.cc  atat.py.hpp  calccorr.h  chull.cc  chull.h  clus_str.cc  clus_str.h  findsym.cc  findsym.h  fixagg.h  fxvector.h  getvalue.h  integer.cc  integer.h  is_int.h  lambda.impl.h  lattype.cc  lattype.h  linklist.h  linsolve.h  lstsqr.cc  lstsqr.h  machdep.h  misc.h  parse.h  serialize.h  serialize.impl.h  stringo.cc  vectmac.h  xtalutil.cc  xtalutil.h
atomic_potentials/: CMakeLists.txt  Makefile.am  bases.h  bases.impl.h  coord_range.rank_range.h  functions.cc  functions.h  functions.iterator.h  numeric_types.h  representation.cc  representation.h  separable.h  sum_of_separables.coord_range.h  sum_of_separables.h  variable_major.h
ce/: CMakeLists.txt  Makefile.am  __init__.py  _single_site_factory.py  cesep.h  cesep.impl.h  cluster.cc  cluster.h  cluster.impl.h  cluster.py  colmappings.h  constituent_strain.h  constituent_strain.impl.h  create_clusters.cc  create_clusters.h  create_pairs.cc  create_pairs.h  drautz_diaz_ortiz.h  factory.py  find_pis.cc  find_pis.h  fit.cc  fit.h  fit.impl.h  functional_builder.h  functional_builder.impl.h  harmonic.cc  harmonic.h  harmonic.impl.h  main.cc  mlcluster.cc  mlcluster.h  mlclusters.cc  mlclusters.h  module.cc  polynome.cc  polynome.h  prepare.cc  prepare.h  productilj.cc  (+6 more)
crystal/: A2BX4.py  ABX.py  CMakeLists.txt  Jamfile  Makefile.am  __init__.py  add_atom.h  algorithms.h  atom.h  atom.py.impl.hpp  atom_base.cc  atom_base.h  atom_cdi.hpp  atom_freeze.h  atom_getset.hpp  binary.py  bravais.py  cast.cc  cast.h  compare_sites.h  confsplit.cc  confsplit.h  coordination_shells.cc  coordination_shells.h  crystal.h  divide_and_conquer.h  divide_and_conquer.impl.h  enumerate.h  epi_structure.cc  epi_structure.h  equivalent_structures.cc  equivalent_structures.h  exceptions.h  fill_structure.cc  fill_structure.h  fourier.h  fractional_cartesian.h  ideal_lattice.cc  ideal_lattice.h  is_container.h  (+52 more)
darwin/: Makefile  Makefile.am  alloylayers.h  alloylayers.impl.h  assign_callbacks.h  bandgap.cc  bandgap.h  bandgap_stubs.cc  bandgap_stubs.h  bandgap_stubs.impl.h  bitstring.h  bitstring.impl.h  breeder.h  call_init.h  ce.cc  ce.h  checkpoints.h  checkpoints.impl.h  communicators.cc  communicators.h  communicators.imp.h  communicators.impl.h  concentration.cc  concentration.h  darwin.h  darwin.impl.h  debug.cc  debug.h  dependencies.pl  effective_mass.h  electric_dipole.cc  electric_dipole.h  emass.cc  emass.h  emass.impl.h  emass_stubs.cc  emass_stubs.h  emass_stubs.impl.h  evaluation.h  evaluation.impl.h  (+74 more)
dftcrystal/: CMakeLists.txt  __init__.py  basis.py  binding_energy.py  crystal.py  electronic.py  external.py  extract.py  functional.py  geometry.py  hamiltonian.py  input.py  interactive.py  molecule.py  optgeom.py  parse.py  relax.py  structure.py
enum/: CMakeLists.txt  Makefile.am  __init__.py  defects.py  exceptions.h  fciterator.cc  fciterator.h  find_all_cells.cc  find_all_cells.h  label_exchange.cc  label_exchange.h  main.cc  manipulations.cc  manipulations.h  module.cc  ndimiterator.cc  ndimiterator.h  numeric_type.cc  numeric_type.h  remove_smith_equivalents.cc  remove_smith_equivalents.h  transform.cc  transform.h  transforms.py  translation.cc  translation.h
escan/: CMakeLists.txt  Makefile.am  __init__.py  _bandgap.py  _bandstructure.py  _extract.py  _massextract.py  _methods.py  _potential.py  _wfns.py  band_structure.py  derivatives.py  emass.py  escan.cc  escan.hpp  escan_types.f90  fftmesh.py  fortran.f90  functional.py  kescan.py  kpoints.py  ldos.py  profile.py  python.cc  va.py  wavefunctions.cc  wavefunctions.hpp  wavefunctions_module.f90
ewald/: CMakeLists.txt  __init__.py  erfc.cc  ewald.cc  ewald.h  module.cc
factory/: Makefile.am  chain_connect_attribute.h  chain_connect_node.h  chain_connect_value.h  chainconnects.h  factory.h  functiontype.h  fusedfactory.h  visit_xml.h  xmlfactory.h  xmlfusedfactory.h  xmlkey.h
ga/: CMakeLists.txt  Makefile.am  __init__.in.py  __init__.py  _bitstring.py  _ga.py  _standard.py  bitstring.py  ce.py  darwin.py  extract.py  functional.py  ga.py  history.py  random.py  random_search.py  standard.py  stepped.py  xgsgo.py
ipython/: CMakeLists.txt  __init__.py  _collect.py  _doc.py  _explore.py  _goto.py  _jobparams.py  _launch.py  _showme.py  copyfolder.py  explore.py  export.py  extension.py  goto.py  ipy_lada.py  jmol.py  listfolders.py  listjobs.py  manipfolders.py  qstat.py  record.py  savefolders.py  savejobs.py  showme.py
jobfolder/: CMakeLists.txt  __init__.py  bleeder.py  extract.py  forwarding_dict.py  jobfolder.py  manipulator.py  massextract.py  runme.py  runone.py  templates.py
jobs/: CMakeLists.txt  Makefile.am  __init__.py  bleeder.py  default_params.py  extract.py  forwarding_dict.py  jobdict.py  manipulator.py  massextract.py  runme.py  runone.py  templates.py
lamarck/: CE_to_ATAT_MC.pl  Jamfile  Makefile.am  USER_README.txt  atom.h  atom.py.cc  atom.py.hpp  atom.py.impl.h  ch_template.h  cluster.cc  cluster.h  constituent_strain.cc  constituent_strain.h  constituent_strain.impl.h  convert_from_atat.pl  convex_hull.cc  convex_hull.h  dependencies.pl  functional_builder.cc  functional_builder.h  functional_builder.impl.h  functors.h  harmonic.cc  harmonic.h  harmonic.impl.h  lattice.cc  lattice.h  main.cc  makefile  one_point_hull.h  poly_cs.ccx  poly_cs.hx  poly_harmonic.ccx  poly_harmonic.hx  polynome.cc  polynome.h  structure.cc  structure.h
lapack/: Makefile.am  dgemm.f  dscal.f  lapack.cc  (+2 more)
(+2101 files in other folders)
